feat: add aggregatedreport tables and create API for aggregated report (#56)
* feat: add visit_daily_report table and implement report aggregator

* Refactor visit_daily_report repository methods and tests
